--- a/MOVIE FOLDER/HOMEPAGE.CSS
+++ b/MOVIE FOLDER/HOMEPAGE.CSS
@@ -15,6 +15,12 @@ body{
 }
 
 /* Navigation */
+
+#search{
+    text-decoration: none;
+    color:#f1f1f1;
+}
+
 ul{ 
         list-style-type: none;
         background-color:#282A35;
