--- a/MOVIE FOLDER/Jawan.css
+++ b/MOVIE FOLDER/Jawan.css
@@ -1,6 +1,6 @@
-/* body{
-    background-color: black;
-} */
+body{
+   background-color:white;
+}
 
 /* LOGO */
 .logo{
@@ -176,7 +176,7 @@ ul li:hover .sub6{
 }
 
 .Review{
-    height: 500px;
+    height: 850px;
     box-shadow: 1px 1px 15px 1px;
     text-align: justify;
     padding-left: 10px;
